--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -15,3 +15,13 @@
     animation: blink 1s steps(5, start) infinite;
   }
 }
+/* Geoweaver */
+
+.geoweaver-landing-text {
+  background: linear-gradient(90deg, #303B4C 0%, rgba(0, 102, 255, 0.7) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  font-family: 'SF Mono';
+  font-style: normal;
+}
