--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -2,207 +2,11 @@
   <!-- Banner -->
   {{ with .Params.banner }}
     <section class="section pt-14">
-      <div class="container">
-        <div class="justify-center row">
-          <div class="mb-8 text-center lg:col-7">
-            <h1 class="mb-4">
-              <div id="typewriter" class="overflow-hidden font-mono text-2xl whitespace-nowrap">
-                <span id="landing-page-text"></span>
-                <span class="w-1 bg-black cursor">|</span>
-              </div>
-              {{ .title | markdownify }}
-            </h1>
-            <p class="mb-8">
-              {{ .content | markdownify }}
-            </p>
-            {{ with .button }}
-              {{ if .enable }}
-                <a class="btn btn-primary" href="{{ .link | absURL }}">
-                    {{ .label }}
-                  <i class="pl-2 fa fa-arrow-right"></i>
-                </a>
-              {{ end }}
-            {{ end }}
-          </div>
-          <div class="col-12">
-            {{ partial "image" (dict "Src" .image "Alt" "Banner image" "Loading" "eager" "Class" "mx-auto lg:!max-w-[800px]" ) }}
-          </div>
-        </div>
-      </div>
+      <h2 class='pl-48 font-mono'>Build workflows that scale</h2>
+      <h1 class='pl-96 geoweaver-landing-text'>Geoweaver</h1>
+      <p class='max-w-3xl pt-6 pl-48 text-justify font-heebo'>An open-source, in-browser tool for simplifying data processing workflows with high-performance server support, featuring code history and workflow orchestration.</p>
+
     </section>
   {{ end }}
   <!-- /Banner -->
-
-  <!-- Features & Capabilities -->
-  {{ with site.GetPage "sections/features" }}
-      {{if .Params.enable}}
-          <section class='section'>
-            <div>
-              <h4 class='mx-auto mb-6 text-center '>Key Features</h4>
-              <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6">
-                <p class="mb-4 font-bold">
-                  {{ .Title | markdownify }}
-                </p>
-              </div>
-              <div class="container mx-auto">
-                <div class='grid grid-cols-3 gap-4'>
-                  {{ range $i, $e:= .Params.features }}
-                  <div class="max-w-sm mx-auto overflow-hidden transition duration-500 ease-in-out bg-white shadow-md max-h-32 rounded-xl hover:shadow-lg hover:bg-gray-100">
-                    <div class="flex">
-                      <div class="flex-shrink-0">
-                        <img class="object-cover h-32 md:w-24" src="{{ .image | markdownify }}" alt="Image Description">
-                      </div>
-                      <div class="p-3">
-                        <h2 class="text-xl font-semibold">{{ .featureName | markdownify }}</h2>
-                        <p class="mt-1 mb-3 overflow-auto text-gray-600">{{ .featureDescription | markdownify }}</p>
-                      </div>
-                    </div>
-                  </div>
-                {{ end }}
-                </div>
-              </div>
-            </div>
-          </section>
-      {{ end }}
-  {{ end }}
-
-  <!-- Features -->
-  {{ range $i, $e:= .Params.features }}
-    <section class="section-sm {{ if (modBool $i 2) }}bg-gradient{{ end }}">
-      <div class="container">
-        <div class="items-center justify-between row">
-          <div
-            class="mb:md-0 {{ if not (modBool $i 2) }}
-              md:order-2
-            {{ end }} md:col-5 mb-6">
-            {{ partial "image" (dict "Src" .image "Alt" "feature image") }}
-          </div>
-          <div
-            class="{{ if not (modBool $i 2) }}
-              md:order-1
-            {{ end }} md:col-7 lg:col-6">
-            <h2 class="mb-4">
-              {{ .title | markdownify }}
-            </h2>
-            <p class="mb-8 text-lg">
-              {{ .content | markdownify }}
-            </p>
-            <ul>
-              {{ range .bulletpoints }}
-                <li class="relative pl-6 mb-4">
-                  <i class="fa fa-check absolute left-0 top-1.5"></i>
-                  {{ . | markdownify }}
-                </li>
-              {{ end }}
-            </ul>
-            {{ with .button }}
-              {{ if .enable }}
-                <a class="mt-6 btn btn-primary" href="{{ .link | absURL }}">
-                  {{ .label }}
-                  <i class="pl-2 fa fa-arrow-right"></i>
-                </a>
-              {{ end }}
-            {{ end }}
-          </div>
-        </div>
-      </div>
-    </section>
-  {{ end }}
-  <!-- /Features -->
-
-  <!-- Testimonials -->
-  {{ with site.GetPage "sections/testimonial" }}
-    {{ if .Params.enable }}
-      <section class="section">
-        <div class="container">
-          <div class="row">
-            <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6">
-              <h2 class="mb-4">
-                {{ .Title | markdownify }}
-              </h2>
-              <p>
-                {{ .Params.description | markdownify }}
-              </p>
-            </div>
-            <div class="col-12">
-              <div class="swiper testimonial-slider">
-                <div class="swiper-wrapper">
-                  {{ range .Params.testimonials }}
-                    <div class="swiper-slide">
-                      <div
-                        class="py-10 rounded-lg bg-theme-light dark:bg-darkmode-theme-light px-7">
-                        <div class="text-dark dark:text-white">
-                          <svg
-                            width="33"
-                            height="20"
-                            viewBox="0 0 33 20"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                              d="M1.28375 19.41L0.79375 18.64C1.21375 17.0067 1.75042 15.07 2.40375 12.83C3.05708 10.5433 3.75708 8.28 4.50375 6.04C5.29708 3.75333 6.06708 1.77 6.81375 0.0899959H15.3538C14.9338 2.09666 14.4904 4.26667 14.0238 6.6C13.5571 8.88666 13.1371 11.15 12.7638 13.39C12.4371 15.5833 12.1571 17.59 11.9238 19.41H1.28375ZM31.69 0.0899959L32.18 0.859998C31.76 2.54 31.2233 4.5 30.57 6.74C29.9167 8.98 29.2167 11.2433 28.47 13.53C27.7233 15.77 26.9533 17.73 26.16 19.41H17.69C18.0167 17.9167 18.3433 16.33 18.67 14.65C18.9967 12.9233 19.3 11.22 19.58 9.54C19.9067 7.81333 20.1867 6.15667 20.42 4.57C20.7 2.93666 20.91 1.44333 21.05 0.0899959H31.69Z"
-                              fill="currentColor" />
-                          </svg>
-                        </div>
-                        <blockquote class="mt-8">
-                          {{ .content | markdownify }}
-                        </blockquote>
-                        <div class="flex items-center mt-11">
-                          <div class="text-dark dark:text-white">
-                            {{ partial "image" (dict "Src" .avatar "Size" "50x50" "Class" "rounded-full" "Alt" .name) }}
-                          </div>
-                          <div class="ml-4">
-                            <h3 class="font-semibold h5 font-primary">
-                              {{ .name }}
-                            </h3>
-                            <p class="text-dark dark:text-white">
-                              {{ .designation | markdownify }}
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  {{ end }}
-                </div>
-                <div
-                  class="flex items-center justify-center text-center testimonial-slider-pagination mt-9"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    {{ end }}
-  {{ end }}
-  <!-- /Testimonials -->
-
-  <!-- Examples -->
-  {{/*  {{ with site.GetPage "sections/examples" }}
-    {{if .Params.enable}}
-      <section class="section">
-          <div class="container">
-            <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6">
-              <h2 class="mb-4">
-                {{ .Title | markdownify }}
-              </h2>
-            </div>
-
-            <div class="grid grid-flow-col grid-rows-2 gap-4 mt-2">
-              <div class="border-2 border-gray-200 rounded">
-                  <h5>Creating a workflow</h5>
-              </div>
-              <div class="border-2 border-gray-200 rounded">
-                <h5>Creating a workflow</h5>
-              </div>
-            <div class="border-2 border-gray-200 rounded">
-              <h5>Creating a workflow</h5>
-            </div>
-            <div class="border-2 border-gray-200 rounded">
-              <h5>Creating a workflow</h5>
-            </div>
-            </div>
-
-          </div>
-      </section>
-    {{ end }}
-  {{ end }}  */}}
-
 {{ end }}
