pre slider config changes

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -25,3 +25,14 @@
   font-family: 'SF Mono';
   font-style: normal;
 }
+
+.getting-started {
+  background: rgb(255,27,107);
+  background: linear-gradient(230deg, rgba(255,27,107,1) 4%, rgba(255,81,235,1) 89%);
+}
+
+.view-on-github {
+  color: white;
+  background-color: black;
+  
+}
