modified content for  geoweaver description

--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -44,9 +44,7 @@
             <h3 class='mt-16 font-mono'>Go From Zero To Production 🏁</h3>
             <div class="max-w-xl pl-16 mt-6">
               <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                Experience the power of Geoweaver, your all-in-one solution for simplifying complex scientific workflows. Whether you're a seasoned researcher or a novice, our user-friendly, web-based platform allows you to effortlessly manage data processing tasks, saving you time and preserving your workflow history. Unlock the potential of online spatial data facilities, high-performance computation platforms, and open-source libraries with Geoweaver. Get started today and go from zero to production with ease.
               </p>
 
               <p class='font-bold pl-10 pt-10 font-heebo'>Learn more about deploying with Geoweaver</p>
@@ -148,7 +146,7 @@
                 <div class="carousel-item">
                   <div class="ml-48 border-solid border-sky-400 bg-white rounded max-w-xl p-4">
                     <p class="text-center font-bold mb-5 font-mono">SWE Wormhole</p>
-                    <p class="font-heebo">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p class="font-heebo">The SWE Workflow leverages Geoweaver, to help manage the complex python & shell scripts which are used to collect training data from various sources like GridMET, SRTM 90m, Modis and AMSR which is used to train the model to predict SWE in the western US.</p>
                   </div>
                 </div>
 
