--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -12,8 +12,8 @@
         <h1 class='pl-80 geoweaver-landing-text'>Geoweaver</h1>
         <p class='max-w-3xl pt-6 pl-48 text-justify font-heebo'>An open-source, in-browser tool for simplifying data processing workflows with high-performance server support, featuring code history and workflow orchestration.</p>
 
-        <div class="flex pl-48 mt-14 ml-32">
-          <a href="https://github.com/your-github-repo" class="text-white no-underline">
+        <div class="flex pl-48 mt-14 ml-32 ">
+          <a href="https://github.com/your-github-repo" class="text-white no-underline transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
             <div class="mr-4 text-white bg-black rounded w-48 text-center pt-2" style="height: 40px;">
               <div style='width: 22px; height: 22px; display: inline-block;' class='text-center mr-2'>
                 {{ partial "image" (dict "Src" .githubIcon "Alt" "Demo Icon" "Loading" "eager" "Class" "inline-block mr-4" "Width" "10px" "Height" "10px") }}
@@ -21,7 +21,7 @@
               View on GitHub
             </div>
           </a>
-          <a href="https://geobrain.csiss.gmu.edu/Geoweaver/" class="text-white no-underline">
+          <a href="https://geobrain.csiss.gmu.edu/Geoweaver/" class="text-white no-underline transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
             <div class='bg-[#337AB7] p-2 rounded text-center w-36' style="height: 40px;">
               <div style='width: 22px; height: 22px;' class='inline-block text-center'>
                 {{ partial "image" (dict "Src" .globeIcon "Alt" "Demo Icon" "Loading" "eager" "Class" "inline-block mr-2" "Width" "10px" "Height" "10px") }}
@@ -50,7 +50,7 @@
               <p class='font-bold pl-10 pt-10 font-heebo'>Learn more about deploying with Geoweaver</p>
               {{/*  need to underline this  */}}
 
-              <button class='getting-started text-white p-2 rounded w-36 mt-8 mb-10 ml-32 max-w-full'>
+              <button class='transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 getting-started text-white p-2 rounded w-36 mt-8 mb-10 ml-32 max-w-full'>
                 Get Started
               </button>
             </div>
@@ -166,38 +166,50 @@
 
         <div class='pl-48 flex items-center flex-row'>
           <div class="grid grid-cols-2 grid-flow-cols">
-            <div class='ml-24 mb-10 items-center justify-center flex bg-[#D4F1FF] rounded-2xl' style='width: 150px; height: 160px;'>
-              <div style='width: 60px; height: 60px'>
-                {{ partial "image" (dict "Src" .appleLogo "Alt" "apple logo" "Loading" "eager" "Class" "large-image absoulte right-0" ) }}
+            <a href="https://github.com/ESIPFed/Geoweaver/releases/download/latest/Geoweaver.dmg">
+              <div class='ml-24 mb-10 items-center justify-center flex bg-[#D4F1FF] rounded-2xl' style='width: 150px; height: 160px;'>
+                <div style='width: 60px; height: 60px'>
+                  {{ partial "image" (dict "Src" .appleLogo "Alt" "apple logo" "Loading" "eager" "Class" "large-image absoulte right-0" ) }}
+                </div>
+                <div class='mt-2'>
+                  <p class='text-xl text-center'>MacOS</p>
+                </div>
               </div>
-              <div class='mt-2'>
-                <p class='text-xl text-center'>MacOS</p>
+            </a>
+
+            <a href="https://github.com/ESIPFed/Geoweaver/releases/download/latest/GeoweaverInstaller.exe">
+              <div class='ml-24 items-center justify-center flex bg-[#D4FFE8] rounded-2xl' style='width: 150px; height: 160px;'>
+                <div style='width: 60px; height: 60px'>
+                  {{ partial "image" (dict "Src" .windowsLogo "Alt" "windows logo" "Loading" "eager" "Class" "large-image absoulte right-0" ) }}
+                </div>
+                <div class='mt-2'>
+                  <p class='text-xl text-center'>Windows</p>
+                </div>
               </div>
-            </div>
-            <div class='ml-24 items-center justify-center flex bg-[#D4FFE8] rounded-2xl' style='width: 150px; height: 160px;'>
-              <div style='width: 60px; height: 60px'>
-                {{ partial "image" (dict "Src" .windowsLogo "Alt" "windows logo" "Loading" "eager" "Class" "large-image absoulte right-0" ) }}
+            </a>
+
+            <a href="https://github.com/ESIPFed/Geoweaver/releases/download/latest/geoweaver.deb">
+              <div class='ml-24 items-center justify-center flex bg-[#D4E2FF] rounded-2xl' style='width: 150px; height: 160px;'>
+                <div style='width: 60px; height: 60px'>
+                  {{ partial "image" (dict "Src" .linuxLogo "Alt" "linux logo" "Loading" "eager" "Class" "large-image absoulte right-0" ) }}
+                </div>
+                <div class='mt-2'>
+                  <p class='text-xl text-center'>Linux</p>
+                </div>
               </div>
-              <div class='mt-2'>
-                <p class='text-xl text-center'>Windows</p>
+            </a>
+
+            <a href="https://github.com/ESIPFed/Geoweaver/releases/download/latest/geoweaver.jar">
+              <div class='ml-24 items-center justify-center flex bg-[#FFE3D4] rounded-2xl' style='width: 150px; height: 160px;'>
+                <div style='width: 60px; height: 60px'>
+                  {{ partial "image" (dict "Src" .javaLogo "Alt" "linux logo" "Loading" "eager" "Class" "large-image absoulte right-0" ) }}
+                </div>
+                <div class='mt-2'>
+                  <p class='text-xl text-center'>Jar</p>
+                </div>
               </div>
-            </div>
-            <div class='ml-24 items-center justify-center flex bg-[#D4E2FF] rounded-2xl' style='width: 150px; height: 160px;'>
-              <div style='width: 60px; height: 60px'>
-                {{ partial "image" (dict "Src" .linuxLogo "Alt" "linux logo" "Loading" "eager" "Class" "large-image absoulte right-0" ) }}
-              </div>
-              <div class='mt-2'>
-                <p class='text-xl text-center'>Linux</p>
-              </div>
-            </div>
-            <div class='ml-24 items-center justify-center flex bg-[#FFE3D4] rounded-2xl' style='width: 150px; height: 160px;'>
-              <div style='width: 60px; height: 60px'>
-                {{ partial "image" (dict "Src" .javaLogo "Alt" "linux logo" "Loading" "eager" "Class" "large-image absoulte right-0" ) }}
-              </div>
-              <div class='mt-2'>
-                <p class='text-xl text-center'>Jar</p>
-              </div>
-            </div>
+            </a>
+
           </div>
         </div>
 
