change homepage repo link to point to geoweaver github repo

--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -13,7 +13,7 @@
         <p class='max-w-3xl pt-6 pl-48 text-justify font-heebo'>An open-source, in-browser tool for simplifying data processing workflows with high-performance server support, featuring code history and workflow orchestration.</p>
 
         <div class="flex pl-48 mt-14 ml-32 ">
-          <a href="https://github.com/your-github-repo" class="text-white no-underline transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
+          <a href="github.com/ESIPFed/Geoweaver" class="text-white no-underline transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">
             <div class="mr-4 text-white bg-black rounded w-48 text-center pt-2" style="height: 40px;">
               <div style='width: 22px; height: 22px; display: inline-block;' class='text-center mr-2'>
                 {{ partial "image" (dict "Src" .githubIcon "Alt" "Demo Icon" "Loading" "eager" "Class" "inline-block mr-4" "Width" "10px" "Height" "10px") }}
