add href to getting started and removed placeholder blog content

--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -50,9 +50,12 @@
               <p class='font-bold pl-10 pt-10 font-heebo'>Learn more about deploying with Geoweaver</p>
               {{/*  need to underline this  */}}
 
-              <button class='transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 getting-started text-white p-2 rounded w-36 mt-8 mb-10 ml-32 max-w-full'>
-                Get Started
-              </button>
+              <a href="https://esipfed.github.io/Geoweaver/docs/install.html">
+                <button class='transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 getting-started text-white p-2 rounded w-36 mt-8 mb-10 ml-32 max-w-full'>
+                  Get Started
+                </button>
+              </a>
+
             </div>
           </div>
         </div>
@@ -157,7 +160,7 @@
       </div>
     </section>
 
-    <section class='mt-20'>
+    <section class='mt-20' id="downloads-section">
       <p class='text-4xl font-mono text-bold tracking-wide text-center'>Free, Opensource &</p>
       <h1 class='font-mono text-bold tracking-wide text-center'>Works where you WORK</h1>
       <p class='text-xl font-heebo tracking-widest text-center'>Download the <span class='font-bold'>APP</span></p>
