changed text duplication

--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -125,7 +125,7 @@
             </div>
             <div class='pl-10 flex flex-col text-center max-w-lg' style='width: 220px; height: 220px;'>
               <div> {{ partial "image" (dict "Src" .webuiImage "Alt" "Demo Icon" "Loading" "eager" "Class" "inline-block mr-2" "Width" "10px" "Height" "10px") }}</div>
-              <div class='mt-2 w-56'>Seamlessly connect to external servers with SSH </div>
+              <div class='mt-2 w-56'>In-Built Web UI with full support for Python</div>
             </div>
           </div>
         </div>
