added pygeoweaver to landing page

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -31,8 +31,13 @@
   background: linear-gradient(230deg, rgba(255,27,107,1) 4%, rgba(255,81,235,1) 89%);
 }
 
+.pygeoweaver-learn-more {
+  background: rgb(52,157,156);
+  background: linear-gradient(90deg, rgba(52,157,156,1) 0%, rgba(255,196,0,1) 100%);
+}
+
 .view-on-github {
   color: white;
   background-color: black;
-  
+
 }
