changes to footer

--- a/themes/geoweaver/layouts/partials/essentials/footer.html
+++ b/themes/geoweaver/layouts/partials/essentials/footer.html
@@ -50,7 +50,7 @@
   <div class="border-border dark:border-darkmode-border border-t py-7">
     <div class="text-light dark:text-darkmode-light container text-center">
       <p>
-        {{ site.Params.copyright | markdownify }}
+        Geoweaver is maintained by <a class="underline" href="https://github.com/ESIPFed/Geoweaver/graphs/contributors">community effort</a>
       </p>
     </div>
   </div>
