--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -30,10 +30,6 @@
             </div>
           </a>
         </div>
-
-
-
-
       </div>
     </section>
     <section>
@@ -240,6 +236,17 @@
             <p class="font-bold font-heebo text-center max-w-[500px]">Geoweaver can now run directly inside your Jupyter notebooks and Python scripts, empowering you to effortlessly navigate complex scientific workflows with ease.</p>
           </div>
 
+          <div class="flex items-center justify-center mt-4">
+            <div class="flex bg-white rounded pt-2 pb-2 pl-4 pr-4 max-w-[450px] border-2 border-[#FEC600]">
+              <div>
+                <p class="font-mono"><a class="font-bold">$ </a>pip install pygeoweaver</p>
+              </div>
+              {{ $image := resources.Get "images/landing-page/clipboard-copy-done-tick.png" }}
+              <div id="copy-install-text" class="h-[20px] w-[20px] cursor-pointer ml-5 pt-1" data-image-url="{{ $image.Permalink }}">
+                {{ partial "image" (dict "Src" .clipboardCopyIcon "Alt" "python logo" "Loading" "eager")}}
+              </div>
+            </div>
+          </div>
 
           <a href="https://pygeoweaver.readthedocs.io/en/latest/">
             <button class='transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300 pygeoweaver-learn-more text-white p-2 rounded w-36 mt-8 mb-10 max-w-full'>
