--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -262,7 +262,7 @@
 <section>
   <h1 class="font-mono text-center pt-10 tracking-wide">Supported By</h1>
   <div class="flex items-center justify-center">
-    <p class="font-bold font-heebo max-w-[420px] overflow-auto text-center pt-5">We thank these institutions for generously supporting the development and maintenance of Geoweaver.</p>
+    <p class="font-bold font-heebo max-w-[420px] overflow-auto text-center pt-5">We thank our sponsors for supporting the development and maintenance of Geoweaver.</p>
   </div>
 
   <div class="flex justify-center space-x-4 mt-5 pb-10">
