--- a/themes/geoweaver/assets/scss/main.scss
+++ b/themes/geoweaver/assets/scss/main.scss
@@ -17,15 +17,15 @@
   @import "utilities";
 }
 
-@import "search";
-@import "social-share";
-@import "gallery-slider";
+//@import "search";
+//@import "social-share";
+//@import "gallery-slider";
 @import "images";
-@import "toc";
-@import "tab";
-@import "accordion";
-@import "modal";
-@import "notice";
+//@import "toc";
+//@import "tab";
+//@import "accordion";
+//@import "modal";
+//@import "notice";
 
 @import "module-overrides";
 @import "custom";
