--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -243,7 +243,7 @@
 
 
           <div class="flex flex-col items-center justify-center mt-2 ml-[-270px]"> <!-- Adjusted margin top -->
-            <p class="font-roboto italic font-bold">Install</p>
+            <p class="font-sans italic font-bold">Install</p>
             <div class="w-[60px] mt-[-14px]">
               {{ partial "image" (dict "Src" .installUnderline "Alt" "Demo Icon" "Loading" "eager" "Class" "inline-block mr-2" "Width" "2px" "Height" "2px") }}
             </div>
